# Ultimate-Django-for-Web-App-Development-Using-Python

./: README.md
Chapter 02/: pyproject.toml
Chapter 05/: .pre-commit-config.yaml  README.md  pyproject.toml
Chapter 05/taskmanager/taskmanager/: asgi.py  settings.py
Chapter 05/taskmanager/tasks/: admin.py  models.py  urls.py  views.py
Chapter 05/taskmanager/tasks/migrations/: 0003_create_groups.py
Chapter 05/taskmanager/templates/tasks/: _header.html  base.html  home.html  task_confirm_delete.html  task_detail.html  task_form.html
Chapter 11/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
Chapter 11/k8s/: configs.yaml  deployment.yaml  jobs.yaml  postgresql-service.yaml  postgresql-statefulset.yaml  redis-service.yaml  redis-statefulset.yaml  secrets.yaml  servicemonitor.yaml  services.yaml
Chapter 11/taskmanager/: gunicorn.conf.py  manage.py  pytest.ini
Chapter 11/taskmanager/accounts/: forms.py  services.py  urls.py  views.py
Chapter 11/taskmanager/accounts/api/: security.py  views.py
Chapter 11/taskmanager/accounts/migrations/: 0001_initial.py  0003_alter_taskmanageruser_managers_apitoken.py
Chapter 11/taskmanager/health/: urls.py  views.py
Chapter 11/taskmanager/taskmanager/: api.py  asgi.py  base.py  dev.py  production.py  tracing.py  urls.py  wsgi.py
Chapter 11/taskmanager/tasks/: admin.py  converters.py  enums.py  forms.py  services.py  urls.py  views.py
Chapter 11/taskmanager/tasks/api/: tasks.py
Chapter 11/taskmanager/tasks/migrations/: 0008_email.py  0013_alter_task_creator.py
Chapter 11/taskmanager/tasks/templatetags/: sprint_tags.py
Chapter 11/taskmanager/tasks/tests/: conftest.py  factories.py
Chapter 11/taskmanager/templates/accounts/: custom_password_reset_email.html  password_reset_confirm_form.html
(+96 files in other folders)
